<resources>
    <string name="app_name">JustForFunServer</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="server_stopped">Server stopped</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>

    <string name="notification_title">Server accepted new connection!</string>
    <string name="notification_text">Connection from IP</string>

    <string name="done">done!</string>
    <string name="waiting_connection">Waiting for new connections ...</string>

    <string name="settings_thread_title">Number Of Threads</string>
    <string name="settings_thread_summary">Select the number of threads that work simultaneously</string>
    <string name="settings_time_title">Duration of the thread</string>
    <string name="settings_time_summary">Select the duration of the thread</string>
    <string name="settings_port_title">Port</string>
    <string name="settings_port_summary">Select the port for waiting incoming connections</string>

</resources>
