<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="1000"
        android:inputType="number"
        android:key="timeThread"
        android:summary="@string/settings_time_summary"
        android:title="@string/settings_time_title" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"
        android:key="numberThreads"
        android:summary="@string/settings_thread_summary"
        android:title="@string/settings_thread_title" />
    <EditTextPreference
        android:defaultValue="8080"
        android:inputType="number"
        android:key="port"
        android:summary="@string/settings_port_summary"
        android:title="@string/settings_port_title" />
</PreferenceScreen>