<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.MainActivity">


    <ToggleButton
        android:id="@+id/button_start"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_toggle_button"
        android:textColor="@android:color/white"
        android:textOff="@string/start_server"
        android:textOn="@string/stop_server"
        android:textSize="15sp" />

    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
        android:id="@+id/service_running"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:color="@color/colorAccent"
        android:radius="5dp"
        app:dd_animationDuration="500"
        app:dd_horizontalSpacing="16dp"
        app:dd_numDots="5"
        app:dd_scaleMultiplier="1.5" />

    <TextView
        android:id="@+id/textView_infoIP"
        style="@style/MyTextView"
        android:layout_below="@+id/service_running"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView_waiting"
        style="@style/MyTextView"
        android:layout_centerInParent="true"
        android:text="@string/waiting_connection"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView_connections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_infoIP"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

</RelativeLayout>